--- a/templates/accounts/roleClass.html
+++ b/templates/accounts/roleClass.html
@@ -27,8 +27,8 @@
 
 <div class="container">
   <div class="btn-container">
-    <a href="{% url 'registerLaboratory' %}" class="btn btn-outline-light btn-lg btn-large">Laboratory</a>
-    <a href="{% url 'registerClinic' %}" class="btn btn-outline-light btn-lg btn-large">Clinic</a>
+    <a href="{% url 'registerLaboratory' %}" class="btn btn-outline-light btn-lg btn-large">آزمایشگاه</a>
+    <a href="{% url 'registerClinic' %}" class="btn btn-outline-light btn-lg btn-large">کلینیک</a>
   </div>
 </div>
 
