--- a/templates/accounts/registerClinic.html
+++ b/templates/accounts/registerClinic.html
@@ -19,7 +19,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    <h2 class="text-center">Clinic Registration</h2>
+                    <h2 class="text-center">ثبت نام کلینیک</h2>
                 </div>
                 <div class="card-body">
                     <form action="{% url 'registerClinic' %}" method="POST" enctype="multipart/form-data">
@@ -28,12 +28,12 @@
                         <!-- Personal Information -->
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="firstname">First Name:</label>
+                                <label for="firstname">نام:</label>
                                 {{ form.first_name }}
                             </div>
 
                             <div class="form-group col-md-6">
-                                <label for="lastname">Last Name:</label>
+                                <label for="lastname">نام خانوادگی:</label>
                                 {{ form.last_name }}
                             </div>
                         </div>
@@ -41,19 +41,19 @@
                         <!-- Clinic Information -->
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="clinicname">Clinic Name:</label>
+                                <label for="clinicname">نام کلینیک:</label>
                                 {{ clinic_form.clinic_name }}
                             </div>
 
                             <div class="form-group col-md-6">
-                                <label for="citizenid">Citizen ID:</label>
+                                <label for="citizenid">شماره ملی:</label>
                                 {{ clinic_form.citizen_id }}
                             </div>
                         </div>
 
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="cliniclicense">Clinic License:</label>
+                                <label for="cliniclicense">گواهی کلینیک:</label>
                                 {{ clinic_form.clinic_license }}
                             </div>
                         </div>
@@ -61,12 +61,12 @@
                         <!-- Contact Information -->
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="phone">Phone:</label>
+                                <label for="phone">شماره تماس:</label>
                                 {{ form.phone_number }}
                             </div>
 
                             <div class="form-group col-md-6">
-                                <label for="email">Email:</label>
+                                <label for="email">ایمیل:</label>
                                 {{ form.email }}
                             </div>
                         </div>
@@ -74,14 +74,14 @@
                         <!-- Clinic Location -->
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="city">City:</label>
+                                <label for="city">شهر:</label>
                                 {{ clinic_form.city }}
                             </div>
                         </div>
 
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="address">Address:</label>
+                                <label for="address">آدرس:</label>
                                 {{ clinic_form.address }}
                             </div>
                         </div>
@@ -89,17 +89,17 @@
                         <!-- Passwords -->
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="pass">Password:</label>
+                                <label for="pass">رمز عبور:</label>
                                 {{ form.password }}
                             </div>
                             <div class="form-group col-md-6">
-                                <label for="repass">Password Confirmation:</label>
+                                <label for="repass">تائید رمز عبور:</label>
                                 {{ form.confirm_password }}
                             </div>
                         </div>
 
                         <!-- Submit Button -->
-                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                        <button type="submit" class="btn btn-primary btn-block">ثبت نام</button>
 
                         <!-- Display Form Errors -->
                         <ul class="errorlist mt-3">
