--- a/templates/accounts/registerUser.html
+++ b/templates/accounts/registerUser.html
@@ -19,7 +19,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    <h2 class="text-center">User Registration</h2>
+                    <h2 class="text-center">ثبت نام کاربر</h2>
                 </div>
                 <div class="card-body">
                     <form action="{% url 'registerUser' %}" method="POST">
@@ -28,12 +28,12 @@
                         <!-- Name Section -->
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="firstname">First Name:</label>
+                                <label for="firstname">نام:</label>
                                 {{ form.first_name }}
                             </div>
 
                             <div class="form-group col-md-6">
-                                <label for="lastname">Last Name:</label>
+                                <label for="lastname">نام خانوادگی:</label>
                                 {{ form.last_name }}
                             </div>
                         </div>
@@ -41,12 +41,12 @@
                         <!-- Contact Information -->
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="phone">Phone:</label>
+                                <label for="phone">شماره تماس:</label>
                                 {{ form.phone_number }}
                             </div>
 
                             <div class="form-group col-md-6">
-                                <label for="email">Email:</label>
+                                <label for="email">ایمیل:</label>
                                 {{ form.email }}
                             </div>
                         </div>
@@ -54,17 +54,17 @@
                         <!-- Password Section -->
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="pass">Password:</label>
+                                <label for="pass">رمز عبور:</label>
                                 {{ form.password }}
                             </div>
                             <div class="form-group col-md-6">
-                                <label for="repass">Password Confirmation:</label>
+                                <label for="repass">تائید رمز عبور:</label>
                                 {{ form.confirm_password }}
                             </div>
                         </div>
 
                         <!-- Submit Button -->
-                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                        <button type="submit" class="btn btn-primary btn-block">ثبت نام</button>
 
                         <!-- Display Form Errors -->
                         <ul class="errorlist mt-3">
