--- a/templates/clinics/clinicDashboard.html
+++ b/templates/clinics/clinicDashboard.html
@@ -165,12 +165,21 @@
                   <!--section 2-->
                   <div class="col-md-6 dashboard-section" id="section2">
                     {% if not appointments%}
-                        <h1>هیچ نوبتی نگرفته اید</h1>
+                        <h1>هیچ نوبتی ندارید</h1>
                     {%else%}
+                    <div class="text-center ">
+            
+                      <button type="button" class="btn btn-primary my-5" data-bs-toggle="modal" data-bs-target="#todayAppointmentsModal">
+                          نوبت های امروز
+                      </button>
+
+                  </div>
                     {%for appointment in appointments%}
                     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                         <div class="d-flex">
                             <div class="flex-shrink-0">
+                              
+
                                 {% if appointment.patient.user.userprofile.profile_picture %}
                                 <img src="{{appointment.patient.user.userprofile.profile_picture.url}}" alt="..." class="rounded" style="height: 100px; width: 100px;">
                 
@@ -387,7 +396,78 @@
     </div>
     </div>        
 
-    
+    <!-- Modal -->
+<div class="modal fade" id="todayAppointmentsModal" tabindex="-1" aria-labelledby="todayAppointmentsModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="todayAppointmentsModalLabel">نوبت های امروز</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <!-- Display appointments for today here -->
+              {% for appointment in today_appointments %}
+              <p>{{ appointment.appointment_datetime }}</p>
+              <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="d-flex">
+                    <div class="flex-shrink-0">
+                      
+
+                        {% if appointment.patient.user.userprofile.profile_picture %}
+                        <img src="{{appointment.patient.user.userprofile.profile_picture.url}}" alt="..." class="rounded" style="height: 100px; width: 100px;">
+        
+                      {% else %}
+                      <img src="{%static 'images/default.PNG'%}" alt="Profile Picture" style="height: 220px; width: 220px; border-radius: 20%;">
+        
+                      {% endif %}
+                    </div>
+                    <div class="flex-column mt-2">
+                        <div class="flex ms-3">
+        
+                            <h4> اسم نوبت گیر : {{appointment.patient.user.firstname}} {{appointment.patient.user.last_name}}</h4>                      
+                        </div>
+                        {%if appointment.notes%}
+                        <div class="flex ms-3 mt-4">              
+                            <strong>اطلاعات اضافی : {{appointment.notes}} </strong>
+                        </div>
+                        {%else%}
+                        <div class="flex ms-3 mt-4">
+                            <strong>اطلاعات اضافی: کاربر اطلاعات اضافی نداده است</strong>
+                        </div>
+                        {%endif%}
+                    </div>
+                    
+                  </div>
+                  <div class="row justify-content-center">
+                        <div class="col-md-4">
+                            <strong>تاریخ نوبت :{{appointment.appointment_datetime}}</strong>
+                        </div>
+                        <div class="w-100"></div>
+                        
+                  </div>
+                  <div class="row justify-content-center">
+        
+                    <div class="col-md-4">
+                        <br>
+                        <strong>هزینه پرداخت شده : {{appointment.clinic.clinic_setting.cost}}</strong>
+                    </div>
+                    <div class="w-100"></div>
+                    
+                    </div>
+                  <div class="d-flex flex-row-reverse">
+                    <div class="p-2 ml-0">
+                      <form action="{%url 'deleteAppointmentsClinic' appointment.id%}">
+                        <button type="button" class="btn btn-outline-info">حذف</button>
+                      </form>
+                    </div>
+                  </div>
+            </div>
+              {% endfor %}
+          </div>
+      </div>
+  </div>
+</div>
+
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       <!-- <script src="{%static 'js/dashboard.js'%}"></script> -->
