--- a/templates/clinics/clinicProfile.html
+++ b/templates/clinics/clinicProfile.html
@@ -9,9 +9,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/clinic_page.css' %]">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{%static 'css/clinic_page.css'%}">
    
 </head>
 <body>
@@ -63,15 +62,19 @@
               </div>
               <div class="col-md-2 d-flex flex-column">
                 <button type="button" class="btn btn-outline-secondary mx-auto my-3" data-bs-toggle="modal" data-bs-target="#addCommentModal">
-                  افزودن نظر
+                    افزودن نظر
+                </button>
+                
+                <button type="button" class="btn btn-outline-primary mx-auto my-3" data-bs-toggle="modal" data-bs-target="#scoreModal">
+                    امتیازدهی
                 </button>
               </div> 
-                <div class="col-md-2 d-flex flex-column">
+
+            <div class="col-md-2 d-flex flex-column">
                 <button class="btn btn-outline-success mt-auto mx-auto w-50" data-bs-toggle="modal" data-bs-target="#appointmentModal">
                     رزرو نوبت
                 </button>
-                </div>
-
+            </div>
                     <div class="col-md-12 my-5">
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
@@ -147,32 +150,48 @@
             </div>
 
             
-            <div id="carouselExampleIndicators" class="carousel slide">
+            <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
-              <div class="carousel-inner rounded-2">
+            
+              <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="{% static 'imagess/c2.jpg'%}" class="d-block w-100 " style=" height: 400px;" alt="...">
+                  <img src="{% static 'images/c2.jpg' %}" class="d-block w-100" style="height: 400px;" alt="Slide 1">
+                  <div class="carousel-caption">
+                    <h5>Slide 1</h5>
+                    <p>Your caption for Slide 1 goes here.</p>
+                  </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="{%static 'images/c3.jpg'%}" class="d-block w-100"style=" height: 400px;" alt="...">
+                  <img src="{% static 'images/c3.jpg' %}" class="d-block w-100" style="height: 400px;" alt="Slide 2">
+                  <div class="carousel-caption">
+                    <h5>Slide 2</h5>
+                    <p>Your caption for Slide 2 goes here.</p>
+                  </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="{%static 'images/c4.jpg'%}" class="d-block w-100"style=" height: 400px;" alt="...">
+                  <img src="{% static 'images/c4.jpg' %}" class="d-block w-100" style="height: 400px;" alt="Slide 3">
+                  <div class="carousel-caption">
+                    <h5>Slide 3</h5>
+                    <p>Your caption for Slide 3 goes here.</p>
+                  </div>
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            
+              <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
+            
+            
 
         </div>
     </div>  
@@ -255,13 +274,12 @@
     
   
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="{% static 'js/clinic_page.js'%}"></script>
-  <!-- Add Popper.js before Bootstrap JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js" integrity="...">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="..." crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js" integrity="..."></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="..." crossorigin="anonymous"></script>
 
+<!-- Your custom scripts -->
+<script src="{% static 'js/clinic_page.js'%}"></script>
 
 
 </body>
