--- a/templates/clinics/clinicDashboard.html
+++ b/templates/clinics/clinicDashboard.html
@@ -224,7 +224,7 @@
                           <div class="d-flex flex-row-reverse">
                             <div class="p-2 ml-0">
                               <form action="{%url 'deleteAppointmentsClinic' appointment.id%}">
-                                <button type="button" class="btn btn-outline-info">حذف</button>
+                                <button type="submit" class="btn btn-outline-info">حذف</button>
                               </form>
                             </div>
                           </div>
@@ -285,6 +285,7 @@
                   </div>
                 </div>
               </div>
+            </div>
             <!--section4-->
             
             <div class="container w-75 dashboard-section" id="section4" >
