--- a/templates/patients/patientDashboard.html
+++ b/templates/patients/patientDashboard.html
@@ -177,7 +177,7 @@
                       <div class="flex justify-content-around">
                           <div class="d-flex flex-column">
                               <div class="d-flex justify-content-center">
-                                  <label for="exampleFormControlInput1" class="form-label">تومان {{wallet.balance}}</label>
+                                  <label for="exampleFormControlInput1" class="form-label">تومان {{balance}}</label>
                               </div>
                               <div class="d-flex justify-content-center">
                                   <label for="exampleFormControlInput1" class="form-label">موجودی </label>
