--- a/templates/accounts/searchClinic.html
+++ b/templates/accounts/searchClinic.html
@@ -102,8 +102,8 @@
                               <div class="col-md-2">
                                   <select class="form-select" name="clinic_type">
                                     <option value="" selected>همه</option>
-                                    <option value="type1">کلینیک</option>
-                                    <option value="type2">آزمایشگاه</option>
+                                    <option value="2">کلینیک</option>
+                                    <option value="3">آزمایشگاه</option>
                                   </select>
                               </div>
                               <div class="col-md-5">
@@ -132,9 +132,16 @@
                         </div>
                         <div class="col-md-7 my-1">
                           <div class="d-flex flex-column">
-                            <h3> {{clinic.clinic_name}}</h3>
+                            <div>
+                              {%if clinic.user.role == 2%}
+                              <h3>  کلینیک {{clinic.clinic_name}}</h3>
+                              {%else %}
+                              <h3> آزمایشگاه {{clinic.clinic_name}} </h3>
+                              {% endif %}
+                            </div>
                             <div class="b-example-divider"></div>
                             <div class="b-example-divider"></div>
+                   
                             <strong>
                               آدرس کلینیک:
                              
